tests/NormalTests/paczka1/small_fuzzy/37740840.err
Error in line 4: W4Ckp4hOu3 S370 12,3
Error in line 9: mKD9hISfC A492 63,6
